tests/ui/abi/riscv-discoverability-guidance.riscv32.stderr
error[E0703]: invalid ABI: found `riscv-interrupt`
  --> $DIR/riscv-discoverability-guidance.rs:17:8
   |
LL | extern "riscv-interrupt" fn isr() {}
   |        ^^^^^^^^^^^^^^^^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions
   = note: please use one of riscv-interrupt-m or riscv-interrupt-s for machine- or supervisor-level interrupts, respectively
help: did you mean
   |
LL | extern "riscv-interrupt-m" fn isr() {}
   |        ~~~~~~~~~~~~~~~~~~~

error[E0703]: invalid ABI: found `riscv-interrupt-u`
  --> $DIR/riscv-discoverability-guidance.rs:23:8
   |
LL | extern "riscv-interrupt-u" fn isr_U() {}
   |        ^^^^^^^^^^^^^^^^^^^ invalid ABI
   |
   = note: invoke `rustc --print=calling-conventions` for a full list of supported calling conventions
   = note: user-mode interrupt handlers have been removed from LLVM pending standardization, see: https://reviews.llvm.org/D149314
help: did you mean
   |
LL | extern "riscv-interrupt-m" fn isr_U() {}
   |        ~~~~~~~~~~~~~~~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0703`.
